--- a/Create-post-page/NewExp-CreaPosPa/stylenew.css
+++ b/Create-post-page/NewExp-CreaPosPa/stylenew.css
@@ -35,56 +35,10 @@ body {
     background: var(--color-efefef);
 }
 
-.main-a {
-    display: flex;
-    position: relative;
-}
 
-.heading-a {
-    text-align: center;
-    align-items: center;
-    height: 100vh;
-    color: #007bff;
-    justify-content: center;
-    padding-top: 19%;
-    position: absolute;
-    background-color: transparent;
-    margin-left: 40%;
-}
+/* new.HTML's Cascading SyeleSheet! */
 
-
-/* .heading-a h1 {} */
-
-.heading-a h2 button {
-    border: 2px solid gold;
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 25px;
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.heading-a h2 button:hover {
-    background-color: #1876f2c2;
-    color: #ffe6e6;
-    border: 2px solid transparent;
-}
-
-
-/* .heading-a {}
-
-.login-a {}
-
-.login-font {} */
-
-.container-a {
-    position: absolute;
-    /* border: 1px solid black; */
-    /* background-color: rgba(255, 177, 177, 0.472); */
-    /* margin-left: 100px; */
-    /* align-items: center; */
-    /* text-align: center; */
-    margin: 2% 28%;
+.AddPost-chacker {
     width: 565px;
     height: 490px;
     border-radius: 15px;
@@ -94,8 +48,70 @@ body {
     background-color: var(--color-efefef);
 }
 
+.main-post textarea {
+    width: 540px;
+    height: 150px;
+    border-radius: 10px;
+    resize: none;
+    border: none;
+    outline: none;
+    margin: 10px;
+    padding: 15px 12px;
+    box-shadow: 3px 1px 8px 1.5px rgb(0 0 0 / 50%);
+    background: #efefefa8;
+}
 
-/* .form-page-a {} */
+section {
+    border: 10px solid transparent;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.heading {
+    position: absolute;
+    text-align: center;
+}
+
+.heading h1 {
+    font-size: 35px;
+}
+
+.heading h2 button {
+    border: 2px solid gold;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 25px;
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.heading h2 button:hover {
+    background-color: #1876f2c2;
+    color: #ffe6e6;
+    border: 2px solid transparent;
+}
+
+section2 {
+    border: 10px solid transparent;
+    width: 660px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.section {
+    border: 10px solid transparent;
+    width: 680px;
+    height: 520px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .post-heading {
     display: flex;
@@ -111,7 +127,6 @@ body {
 
 .close-btn-a {
     left: -26px;
-    /* margin-left: 265px; */
     padding: 0px 7px;
     margin-top: 22px;
     border-radius: 21px;
@@ -119,32 +134,33 @@ body {
     border: none;
 }
 
-.hover-btn button:hover {
+.close-btn-a:hover {
     color: #ffffffff;
     background-color: rgb(255, 0, 0);
     transition: 0.4s;
 }
 
-
-/* .close-btn-a:hover {
-    display: none;
-} */
-
-.hover-btn {
-    flex: 1.5;
+.alert-cancel,
+.alert-okey {
+    padding: 0px 7px;
+    border-radius: 21px;
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
 }
 
-
-/* 
-.post-heading i:hover {
-    display: inline-block;
-    color: #007bff;
-    background-color: rgb(255, 0, 0);
+.alert-cancel:hover {
+    color: #ffffffff;
+    background-color: darkmagenta;
     transition: 0.4s;
-} */
+}
 
-
-/* .user-pro-a {} */
+.alert-okey:hover {
+    color: #ffffffff;
+    background-color: green;
+    transition: 0.4s;
+}
 
 .online {
     position: relative;
@@ -157,8 +173,6 @@ body {
     width: 7px;
     border: 2px solid var(--color-fff);
     border-radius: 50%;
-    /* top: 1px; */
-    /* right: 0; */
     left: 50px;
     bottom: 45px;
     background: var(--color-41db51);
@@ -194,26 +208,69 @@ body {
     font-size: 14px;
     font-weight: 400;
     margin: -4px 2px;
-    /* margin: 0px 4px; */
-    /* padding: 0px 8px 0px 18px; */
-    /* z-index: 1; */
     background: #00000029;
     color: #453535;
     padding: 1px 11px;
     border-radius: 10px;
 }
 
-.main-post textarea {
-    width: 540px;
-    height: 150px;
-    border-radius: 10px;
-    resize: none;
-    border: none;
-    outline: none;
-    margin: 10px;
-    padding: 15px 12px;
-    box-shadow: 3px 1px 8px 1.5px rgb(0 0 0 / 50%);
-    background: #efefefa8;
+.hover-btn {
+    flex: 1.5;
+}
+
+.conteinner {
+    position: absolute;
+    border: 10px solid transparent;
+    width: 100px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contaient {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.alert-box {
+    position: relative;
+}
+
+.alert {
+    position: absolute;
+    border: 1px solid;
+    align-items: center;
+    justify-content: center;
+    margin: 15px 0px 0px -325px;
+    width: 250px;
+    height: 240px;
+    border-radius: 20px;
+    z-index: 300;
+    background: #d5b8b8;
+    padding: 5px 10px;
+}
+
+.alert-bton {
+    text-align: end;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.alert-text i {
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+    color: #944b00;
+    padding: 5px 0px 0px 74px;
+}
+
+.alert-text p {
+    font-size: 20px;
+    text-align: center;
+    padding: 15px 0 30px 0px;
 }
 
 .icon-a i button {
@@ -228,18 +285,11 @@ body {
 .fi {
     margin-left: 150px;
     font-size: 20px;
-    /* padding-top: 15px; */
     margin-top: 15px;
     font-weight: 500;
     background: #0000003d;
     border-radius: 50%;
 }
-
-
-/* .bg-selector {} */
-
-
-/* .icon-a {} */
 
 .emoge-selector {
     border: 1px solid #1d1313a8;
@@ -307,60 +357,21 @@ body {
     color: black;
 }
 
-.posi-rel {
-    position: relative;
+
+/* id */
+
+
+/* */
+
+
+/*#section2 {
+    display: none;
+} */
+
+#Alerte {
+    display: none;
 }
 
-.alert-box {
-    position: absolute;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    width: 180px;
-    height: 80px;
-    border: 1px solid #1876f2;
-}
-
-.test-posit {
-    border: 10px solid red;
-    height: 100vh;
-}
-
-.container-ab {
-    border: 10px solid purple;
-    margin: auto;
-}
-
-
-/* new.HTML's Cascading SyeleSheet! */
-
-section {
-    border: 10px solid red;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.section {
-    border: 10px solid red;
-    width: 680px;
-    height: 520px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.containner {
-    border: 10px solid red;
-    max-width: 700px;
-    margin: auto;
-    height: 15vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#addPost {
+#AddPost {
     display: none;
 }
